[gd_scene load_steps=11 format=3 uid="uid://tuwhcombf2la"]

[ext_resource type="Script" uid="uid://ot48oyc6qq8r" path="res://pick_a_component.gd" id="1_lcm68"]
[ext_resource type="FontFile" uid="uid://bi3m63xiyklw0" path="res://fonts/PressStart2P-Regular.ttf" id="1_qqxec"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lcm68"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kb187"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m7sly"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.225, 0.225, 0.225, 0.6)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqxec"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.6)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vewcx"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.6)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8pg4f"]
bg_color = Color(0.4, 0.223529, 0.192157, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
anti_aliasing = false

[sub_resource type="Theme" id="Theme_advvg"]
Button/fonts/font = ExtResource("1_qqxec")
Button/styles/disabled = SubResource("StyleBoxFlat_lcm68")
Button/styles/focus = SubResource("StyleBoxFlat_kb187")
Button/styles/hover = SubResource("StyleBoxFlat_m7sly")
Button/styles/normal = SubResource("StyleBoxFlat_qqxec")
Button/styles/pressed = SubResource("StyleBoxFlat_vewcx")
Panel/styles/panel = SubResource("StyleBoxFlat_8pg4f")
PanelContainer/styles/panel = SubResource("StyleBoxFlat_8pg4f")

[sub_resource type="LabelSettings" id="LabelSettings_lcm68"]
font = ExtResource("1_qqxec")
font_size = 48

[node name="PickAComponent" type="Control"]
process_mode = 3
visible = false
texture_filter = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_advvg")
script = ExtResource("1_lcm68")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="ComponentChoice" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/ComponentChoice"]
layout_mode = 2
text = "Pick a Key Component"
label_settings = SubResource("LabelSettings_lcm68")

[node name="ComponentChoicesRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/ComponentChoice"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="KeyChoice" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/KeyChoice"]
layout_mode = 2
text = "Pick a Key To Add It To"
label_settings = SubResource("LabelSettings_lcm68")

[node name="KeyChoicesRow" type="HBoxContainer" parent="PanelContainer/MarginContainer/KeyChoice"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="1" type="Button" parent="PanelContainer/MarginContainer/KeyChoice/KeyChoicesRow"]
layout_mode = 2
text = "Key 1"

[node name="2" type="Button" parent="PanelContainer/MarginContainer/KeyChoice/KeyChoicesRow"]
layout_mode = 2
text = "Key 2"

[node name="3" type="Button" parent="PanelContainer/MarginContainer/KeyChoice/KeyChoicesRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "Key 3"
